--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "child_process": "^1.0.2",
-    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
-    "log4js": "^6.7.0",
     "minimist": "^1.2.6",
     "mongoose": "^6.6.1",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "socket.io": "^4.5.3"
+    "passport-local": "^1.0.0"
   }
 }
