--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
     "minimist": "^1.2.6",
     "mongoose": "^6.6.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "twilio": "^3.83.2"
   }
 }
