--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
     "fs": "^0.0.1-security",
+    "log4js": "^6.7.0",
     "minimist": "^1.2.6",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
